Update index.html with Georgia Tech details and bio

--- a/index.html
+++ b/index.html
@@ -793,7 +793,9 @@
         <h1 style="margin:0">ishaan ranjan</h1>
       </div>
       <p class="reveal">Founder building applied AI and researching social systems.</p>
-      <p class="reveal">I'm Ishaan Ranjan, a student at BASIS Peoria in Peoria, AZ. I build applied AI products
+      <p class="reveal">I'm Ishaan Ranjan, an incoming student at Georgia Tech studing Computer Science (AI + Embedded
+        Systems). I build applied
+        AI products
         spanning from agents, graph tracking networks on societal issues, and economics. I'm most passionate about
         building ethical AI
         systems that solve complex societal level problems. Additionally, I have worked on parameter efficient methods
