Update index.html with new bio and acceptances info

--- a/index.html
+++ b/index.html
@@ -793,7 +793,7 @@
         <h1 style="margin:0">ishaan ranjan</h1>
       </div>
       <p class="reveal">Founder building applied AI and researching social systems.</p>
-      <p class="reveal">I'm Ishaan Ranjan, an incoming student at Georgia Tech studing Computer Science (AI + Embedded
+      <p class="reveal">I'm Ishaan Ranjan, an incoming student at Georgia Tech, studing Computer Science (AI + Embedded
         Systems). I build applied
         AI products
         spanning from agents, graph tracking networks on societal issues, and economics. I'm most passionate about
